--- a/arch/arm64/configs/land_defconfig
+++ b/arch/arm64/configs/land_defconfig
@@ -683,6 +683,7 @@ CONFIG_CRYPTO_AES_ARM64_CE_CCM=y
 CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
 CONFIG_CRYPTO_AES_ARM64_NEON_BLK=y
 CONFIG_CRYPTO_CRC32_ARM64=y
+CONFIG_CRYPTO_ZBEWALGO=y
 CONFIG_QMI_ENCDEC=y
 CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_ADRENO_IDLER=y
