--- a/arch/arm/boot/dts/qcom/msm8937.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8937.dtsi
@@ -1,3 +1,4 @@
+
 /*
  * Copyright (c) 2015-2017, The Linux Foundation. All rights reserved.
  *
@@ -22,7 +23,7 @@
 	interrupt-parent = <&intc>;
 
 	chosen {
-		bootargs = "sched_enable_hmp=1";
+		bootargs = "";
 	};
 
 	firmware: firmware {
@@ -471,14 +472,14 @@
 		qcom,bcl-freq-control-list = <&CPU0 &CPU1 &CPU2 &CPU3
 						&CPU4 &CPU5 &CPU6 &CPU7>;
 		qcom,bcl-hotplug-list = <&CPU2 &CPU3>;
-		qcom,bcl-soc-hotplug-list = <&CPU2 &CPU3>;
+		qcom,bcl-soc-hotplug-list = <&CPU0 &CPU1 &CPU2 &CPU3>;
 		qcom,ibat-monitor {
 			qcom,low-threshold-uamp = <3400000>;
 			qcom,high-threshold-uamp = <4200000>;
-			qcom,mitigation-freq-khz = <1094400>;
+			qcom,mitigation-freq-khz = <998400>;
 			qcom,vph-high-threshold-uv = <3500000>;
 			qcom,vph-low-threshold-uv = <3200000>;
-			qcom,soc-low-threshold = <15>;
+			qcom,soc-low-threshold = <10>;
 			qcom,thermal-handle = <&msm_thermal_freq>;
 		};
 	};
@@ -708,64 +709,37 @@
 		clock-names = "clk-c0-4", "clk-c0-5",
 				"clk-c1-4", "clk-c1-5",
 				"clk-cci-4", "clk-cci-2";
+
 		qcom,speed0-bin-v0-c0 =
 			<          0 0>,
-			<  768000000 1>,
-			<  902400000 2>,
+			<  345600000 1>,
+			<  768000000 2>,
+			<  902400000 3>,
 			<  998400000 4>,
-			< 1094400000 6>;
+			< 1094400000 5>,
+			< 1209600000 6>;
 
 		qcom,speed0-bin-v0-c1 =
 			<          0 0>,
-			<  960000000 1>,
-			< 1094400000 2>,
-			< 1248000000 4>,
-			< 1344000000 5>,
-			< 1401000000 6>;
+			<  211200000 1>,
+			<  422400000 2>,
+			<  652800000 3>,
+			<  806400000 4>,
+			<  960000000 5>,
+			< 1036800000 6>,
+			< 1209600000 7>,
+			< 1344000000 7>,
+			< 1497600000 7>,
+			< 1536000000 7>,
+			< 1651200000 7>,
+			< 1708800000 7>,
+			< 1804800000 7>;
 
 		qcom,speed0-bin-v0-cci =
 			<          0 0>,
-			<  400000000 1>,
-			<  533333333 3>;
+			<  400000000 3>,
+			<  533333333 6>;
 
-		qcom,speed1-bin-v0-c0 =
-			<          0 0>,
-			<  768000000 1>,
-			<  902400000 2>,
-			<  998400000 4>,
-			< 1094400000 6>,
-			< 1209600000 7>;
-
-		qcom,speed1-bin-v0-c1 =
-			<          0 0>,
-			<  960000000 1>,
-			< 1094400000 2>,
-			< 1248000000 4>,
-			< 1344000000 5>,
-			< 1401000000 6>,
-			< 1497600000 7>;
-
-		qcom,speed1-bin-v0-cci =
-			<          0 0>,
-			<  400000000 1>,
-			<  533333333 3>;
-
-		qcom,speed2-bin-v0-c0 =
-			<          0 0>,
-			<  768000000 1>,
-			<  902400000 2>,
-			<  998400000 3>;
-
-		qcom,speed2-bin-v0-c1 =
-			<          0 0>,
-			<  960000000 1>,
-			< 1094400000 2>,
-			< 1209600000 3>;
-
-		qcom,speed2-bin-v0-cci =
-			<          0 0>,
-			<  400000000 1>,
-			<  533333333 3>;
 		#clock-cells = <1>;
 	};
 
@@ -787,20 +761,34 @@
 		qcom,governor-per-policy;
 
 		qcom,cpufreq-table-0 =
+			 <  211200 >,
+			 <  422400 >,
+			 <  652800 >,
+			 <  806400 >,
 			 <  960000 >,
-			 < 1094400 >,
+			 < 1036800 >,
 			 < 1209600 >,
-			 < 1248000 >,
 			 < 1344000 >,
-			 < 1401000 >,
-			 < 1497600 >;
+			 < 1497600 >,
+			 < 1536000 >,
+			 < 1651200 >,
+			 < 1708800 >,
+			 < 1804800 >;
 
 		qcom,cpufreq-table-4 =
-			 <  768000 >,
-			 <  902400 >,
+			 <  211200 >,
+			 <  345600 >,
+			 <  422400 >,
+			 <  652800 >,
+			 <  729600 >,
+			 <  806400 >,
+			 <  960000 >,
 			 <  998400 >,
-			 < 1094400 >,
-			 < 1209600 >;
+			 < 1036800 >,
+			 < 1209600 >,
+			 < 1344000 >,
+			 < 1497600 >;
+
 	};
 
 	cci_cache: qcom,cci {
@@ -862,40 +850,73 @@
 		cpubw-cpufreq {
 		target-dev = <&cpubw>;
 		cpu-to-dev-map-0 =
-			<  998400  2929 >,      /* SVS   */
-			< 1094400  5053 >,	/* NOM   */
-			< 1248000  5712 >,	/* NOM+  */
-			< 1344000  7031 >,
-			< 1497600  7031 >;	/* TURBO */
+			<  211200  769 >,
+			<  422400  1611 >,
+			<  652800  1611 >,
+			<  806400  1611 >,
+			<  960000  2929 >,	/* SVS   */
+			< 1036800  5053 >,	/* SVS+  */
+			< 1209600  5712 >,	/* NOM   */
+			< 1344000  6152 >,	/* NOM+  */
+			< 1497600  7031 >,	/* TURBO */
+			< 1536000  7031 >,	/* TURBO+ */
+			< 1651200  7031 >,	/* SUPER TURBO */
+			< 1708800  7031 >,	/* SUPER TURBO+ */
+			< 1804800  7031 >;	/* SUPER TURBO++ */
+
 		cpu-to-dev-map-4 =
-			<  806400  2929 >,	/* SVS  */
-			<  902400  5053 >,	/* NOM   */
-			<  998400  6152 >,	/* NOM+  */
-			< 1209600  7031 >;	/* TURBO */
+			<  211200  769 >,
+			<  345600  1611 >,
+			<  422400  1611 >,
+			<  652800  2929 >,
+			<  729600  2929 >,	/* SVS   */
+			<  806400  2929 >,  /* SVS+  */
+			<  960000  5053 >,	/* SVS++ */
+			<  998400  5712 >,	/* NOM   */
+			< 1036800  6152 >,	/* NOM+  */
+			< 1209600  7031 >,	/* TURBO */
+			< 1344000  7031 >,  /* TURBO+ */
+			< 1497600  7031 >;	/* TURBO++ */
 		};
 
 		cci-cpufreq {
 		target-dev = <&cci_cache>;
 		cpu-to-dev-map-0 =
-			<  998400  400000 >,    /* SVS   */
-			< 1094400  400000 >,	/* NOM   */
-			< 1248000  533333 >,	/* NOM+  */
-			< 1344000  533333 >,
-			< 1497600  533333 >;	/* TURBO */
+			<  211200  400000 >,
+			<  422400  400000 >,
+			<  652800  400000 >,
+			<  806400  400000 >,
+			<  960000  400000 >,	/* SVS   */
+			< 1036800  400000 >,	/* SVS+  */
+			< 1209600  533333 >,	/* NOM   */
+			< 1344000  533333 >,	/* NOM+  */
+			< 1497600  533333 >,	/* TURBO */
+			< 1536000  533333 >,	/* TURBO+ */
+			< 1651200  533333 >,	/* SUPER TURBO */
+			< 1708800  533333 >,	/* SUPER TURBO+ */
+			< 1804800  533333 >;	/* SUPER TURBO++ */
 		cpu-to-dev-map-4 =
-			<  806400  400000 >,	/* SVS  */
-			<  902400  400000 >,	/* NOM   */
-			<  998400  533333 >,	/* NOM+  */
-			< 1209600  533333 >;	/* TURBO */
+			<  211200  400000 >,
+			<  345600  400000 >,
+			<  422400  400000 >,
+			<  652800  400000 >,
+			<  729600  400000 >,	/* SVS   */
+			<  806400  400000 >,  /* SVS+  */
+			<  960000  400000 >,	/* SVS++ */
+			<  998400  400000 >,	/* NOM   */
+			< 1036800  533333 >,	/* NOM+  */
+			< 1209600  533333 >,	/* TURBO */
+			< 1344000  533333 >,  /* TURBO+ */
+			< 1497600  533333 >;	/* TURBO++ */
 		};
 
 		mincpubw-cpufreq {
 			target-dev = <&mincpubw>;
 			cpu-to-dev-map-0 =
-				< 1094400 2929 >,
+				< 422400 2929 >,
 				< 1497600 4248 >;
 			cpu-to-dev-map-4 =
-				<  998400 2929 >,
+				<  422400 2929 >,
 				< 1209600 4248 >;
 		};
 	};
@@ -2063,152 +2084,4 @@
 	clock-names = "core_clk";
 	clocks = <&clock_gcc clk_gcc_oxili_gfx3d_clk>;
 	status = "okay";
-};
-
-/* GPU overrides */
-&msm_gpu {
-
-	qcom,gpu-speed-bin = <0x6018 0x80000000 31>;
-
-	qcom,gpu-pwrlevel-bins {
-		#address-cells = <1>;
-		#size-cells = <0>;
-
-		compatible="qcom,gpu-pwrlevel-bins";
-
-		qcom,gpu-pwrlevels-0 {
-			#address-cells = <1>;
-			#size-cells = <0>;
-
-			qcom,speed-bin = <0>;
-
-			qcom,initial-pwrlevel = <2>;
-
-			/* TURBO */
-			qcom,gpu-pwrlevel@0 {
-				reg = <0>;
-				qcom,gpu-freq = <450000000>;
-				qcom,bus-freq = <9>;
-				qcom,bus-min = <9>;
-				qcom,bus-max = <9>;
-			};
-
-			/* NOM+ */
-			qcom,gpu-pwrlevel@1 {
-				reg = <1>;
-				qcom,gpu-freq = <400000000>;
-				qcom,bus-freq = <7>;
-				qcom,bus-min = <6>;
-				qcom,bus-max = <9>;
-			};
-
-			/* NOM */
-			qcom,gpu-pwrlevel@2 {
-				reg = <2>;
-				qcom,gpu-freq = <375000000>;
-				qcom,bus-freq = <6>;
-				qcom,bus-min = <5>;
-				qcom,bus-max = <8>;
-			};
-
-			/* SVS+ */
-			qcom,gpu-pwrlevel@3 {
-				reg = <3>;
-				qcom,gpu-freq = <300000000>;
-				qcom,bus-freq = <5>;
-				qcom,bus-min = <4>;
-				qcom,bus-max = <7>;
-			};
-
-			/* SVS */
-			qcom,gpu-pwrlevel@4 {
-				reg = <4>;
-				qcom,gpu-freq = <216000000>;
-				qcom,bus-freq = <3>;
-				qcom,bus-min = <1>;
-				qcom,bus-max = <4>;
-			};
-
-			/* XO */
-			qcom,gpu-pwrlevel@5 {
-				reg = <5>;
-				qcom,gpu-freq = <19200000>;
-				qcom,bus-freq = <0>;
-				qcom,bus-min = <0>;
-				qcom,bus-max = <0>;
-			};
-		};
-
-		qcom,gpu-pwrlevels-1 {
-			#address-cells = <1>;
-			#size-cells = <0>;
-
-			qcom,speed-bin = <1>;
-
-			qcom,initial-pwrlevel = <3>;
-
-			/* Super TURBO */
-			qcom,gpu-pwrlevel@0 {
-				reg = <0>;
-				qcom,gpu-freq = <475000000>;
-				qcom,bus-freq = <10>;
-				qcom,bus-min = <10>;
-				qcom,bus-max = <10>;
-			};
-
-			/* TURBO */
-			qcom,gpu-pwrlevel@1 {
-				reg = <1>;
-				qcom,gpu-freq = <450000000>;
-				qcom,bus-freq = <9>;
-				qcom,bus-min = <9>;
-				qcom,bus-max = <10>;
-			};
-
-			/* NOM+ */
-			qcom,gpu-pwrlevel@2 {
-				reg = <2>;
-				qcom,gpu-freq = <400000000>;
-				qcom,bus-freq = <7>;
-				qcom,bus-min = <6>;
-				qcom,bus-max = <9>;
-			};
-
-			/* NOM */
-			qcom,gpu-pwrlevel@3 {
-				reg = <3>;
-				qcom,gpu-freq = <375000000>;
-				qcom,bus-freq = <6>;
-				qcom,bus-min = <5>;
-				qcom,bus-max = <8>;
-			};
-
-			/* SVS+ */
-			qcom,gpu-pwrlevel@4 {
-				reg = <4>;
-				qcom,gpu-freq = <300000000>;
-				qcom,bus-freq = <5>;
-				qcom,bus-min = <4>;
-				qcom,bus-max = <7>;
-			};
-
-			/* SVS */
-			qcom,gpu-pwrlevel@5 {
-				reg = <5>;
-				qcom,gpu-freq = <216000000>;
-				qcom,bus-freq = <3>;
-				qcom,bus-min = <1>;
-				qcom,bus-max = <4>;
-			};
-
-			/* XO */
-			qcom,gpu-pwrlevel@6 {
-				reg = <6>;
-				qcom,gpu-freq = <19200000>;
-				qcom,bus-freq = <0>;
-				qcom,bus-min = <0>;
-				qcom,bus-max = <0>;
-			};
-		};
-	};
 };
