--- a/arch/arm/boot/dts/qcom/msm8937-regulator.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8937-regulator.dtsi
@@ -357,7 +357,7 @@
 		interrupts = <0 15 0>;
 		regulator-name = "apc_corner";
 		regulator-min-microvolt = <1>;
-		regulator-max-microvolt = <6>;
+		regulator-max-microvolt = <7>;
 
 		qcom,cpr-fuse-corners = <3>;
 		qcom,cpr-voltage-ceiling = <1100000 1225000 1350000>;
@@ -394,21 +394,28 @@
 					<70 54 7 0>;
 		qcom,cpr-fuse-quot-offset-scale = <5 5 5>;
 		qcom,cpr-init-voltage-step = <10000>;
-		qcom,cpr-corner-map = <1 2 2 3 3 3>;
+		qcom,cpr-corner-map = <1 1 2 2 2 3 3 3 3 3 3 3>;
 		qcom,cpr-corner-frequency-map =
-				<1 422400000>,
-				<2 960000000>,
-				<3 1094400000>,
-				<4 1209600000>,
-				<5 1344000000>,
-				<6 1497600000>;
+				<1 211200000>,
+				<2 422400000>,
+				<3 652800000>,
+				<4 806400000>,
+				<5 960000000>,
+				<6 1036800000>,
+				<7 1209600000>,
+				<7 1344000000>,
+				<7 1497600000>,
+				<7 1536000000>,
+				<7 1651200000>,
+				<7 1708800000>,
+				<7 1804800000>;
 		qcom,cpr-voltage-ceiling-override =
-				<(-1) (-1) 1100000 1225000 1225000 1350000 1350000 1350000>;
+				<(-1) (-1) 1100000 1225000 1225000 1350000 1350000 1350000 1350000 1350000>;
 		qcom,cpr-voltage-floor-override =
-				<(-1) (-1) 1000000 1100000 1150000 1200000 1225000 1250000>;
+				<(-1) (-1) 1000000 1100000 1150000 1200000 1225000 1250000 1250000 1250000>;
 		qcom,speed-bin-fuse-sel = <37 34 3 0>;
 		qcom,cpr-speed-bin-max-corners =
-					<0 0 1 3 6>;
+					<2 0 1 2 7>;
 		qcom,cpr-fuse-revision = <69 39 3 0>;
 		qcom,cpr-quot-adjust-scaling-factor-max = <0 1400 1400>;
 		qcom,cpr-voltage-scaling-factor-max = <0 2000 2000>;
