--- a/arch/arm/boot/dts/qcom/msm8937.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8937.dtsi
@@ -472,14 +472,14 @@
 		qcom,bcl-freq-control-list = <&CPU0 &CPU1 &CPU2 &CPU3
 						&CPU4 &CPU5 &CPU6 &CPU7>;
 		qcom,bcl-hotplug-list = <&CPU2 &CPU3>;
-		qcom,bcl-soc-hotplug-list = <&CPU2 &CPU3>;
+		qcom,bcl-soc-hotplug-list = <&CPU0 &CPU1 &CPU2 &CPU3>;
 		qcom,ibat-monitor {
 			qcom,low-threshold-uamp = <3400000>;
 			qcom,high-threshold-uamp = <4200000>;
-			qcom,mitigation-freq-khz = <1094400>;
+			qcom,mitigation-freq-khz = <998400>;
 			qcom,vph-high-threshold-uv = <3500000>;
 			qcom,vph-low-threshold-uv = <3200000>;
-			qcom,soc-low-threshold = <15>;
+			qcom,soc-low-threshold = <10>;
 			qcom,thermal-handle = <&msm_thermal_freq>;
 		};
 	};
@@ -721,12 +721,19 @@
 
 		qcom,speed0-bin-v0-c1 =
 			<          0 0>,
-			<  422400000 1>,
-			<  960000000 2>,
-			< 1094400000 3>,
-			< 1209600000 4>,
-			< 1344000000 5>,
-			< 1497600000 6>;
+			<  211200000 1>,
+			<  422400000 2>,
+			<  652800000 3>,
+			<  806400000 4>,
+			<  960000000 5>,
+			< 1036800000 6>,
+			< 1209600000 7>,
+			< 1344000000 7>,
+			< 1497600000 7>,
+			< 1536000000 7>,
+			< 1651200000 7>,
+			< 1708800000 7>,
+			< 1804800000 7>;
 
 		qcom,speed0-bin-v0-cci =
 			<          0 0>,
@@ -754,20 +761,34 @@
 		qcom,governor-per-policy;
 
 		qcom,cpufreq-table-0 =
+			 <  211200 >,
 			 <  422400 >,
+			 <  652800 >,
+			 <  806400 >,
 			 <  960000 >,
-			 < 1094400 >,
+			 < 1036800 >,
+			 < 1209600 >,
+			 < 1344000 >,
+			 < 1497600 >,
+			 < 1536000 >,
+			 < 1651200 >,
+			 < 1708800 >,
+			 < 1804800 >;
+
+		qcom,cpufreq-table-4 =
+			 <  211200 >,
+			 <  345600 >,
+			 <  422400 >,
+			 <  652800 >,
+			 <  729600 >,
+			 <  806400 >,
+			 <  960000 >,
+			 <  998400 >,
+			 < 1036800 >,
 			 < 1209600 >,
 			 < 1344000 >,
 			 < 1497600 >;
 
-		qcom,cpufreq-table-4 =
-			 <  345600 >,
-			 <  768000 >,
-			 <  902400 >,
-			 <  998400 >,
-			 < 1094400 >,
-			 < 1209600 >;
 	};
 
 	cci_cache: qcom,cci {
@@ -829,46 +850,73 @@
 		cpubw-cpufreq {
 		target-dev = <&cpubw>;
 		cpu-to-dev-map-0 =
+			<  211200  769 >,
 			<  422400  1611 >,
+			<  652800  1611 >,
+			<  806400  1611 >,
 			<  960000  2929 >,	/* SVS   */
-			< 1094400  5053 >,	/* SVS+  */
+			< 1036800  5053 >,	/* SVS+  */
 			< 1209600  5712 >,	/* NOM   */
 			< 1344000  6152 >,	/* NOM+  */
-			< 1497600  7031 >;	/* TURBO */
+			< 1497600  7031 >,	/* TURBO */
+			< 1536000  7031 >,	/* TURBO+ */
+			< 1651200  7031 >,	/* SUPER TURBO */
+			< 1708800  7031 >,	/* SUPER TURBO+ */
+			< 1804800  7031 >;	/* SUPER TURBO++ */
+
 		cpu-to-dev-map-4 =
+			<  211200  769 >,
 			<  345600  1611 >,
-			<  768000  2929 >,	/* SVS   */
-			<  902400  5053 >,	/* SVS+  */
+			<  422400  1611 >,
+			<  652800  2929 >,
+			<  729600  2929 >,	/* SVS   */
+			<  806400  2929 >,  /* SVS+  */
+			<  960000  5053 >,	/* SVS++ */
 			<  998400  5712 >,	/* NOM   */
-			< 1094400  6152 >,	/* NOM+  */
-			< 1209600  7031 >;	/* TURBO */
+			< 1036800  6152 >,	/* NOM+  */
+			< 1209600  7031 >,	/* TURBO */
+			< 1344000  7031 >,  /* TURBO+ */
+			< 1497600  7031 >;	/* TURBO++ */
 		};
 
 		cci-cpufreq {
 		target-dev = <&cci_cache>;
 		cpu-to-dev-map-0 =
+			<  211200  400000 >,
 			<  422400  400000 >,
+			<  652800  400000 >,
+			<  806400  400000 >,
 			<  960000  400000 >,	/* SVS   */
-			< 1094400  400000 >,	/* SVS+  */
+			< 1036800  400000 >,	/* SVS+  */
 			< 1209600  533333 >,	/* NOM   */
 			< 1344000  533333 >,	/* NOM+  */
-			< 1497600  533333 >;	/* TURBO */
+			< 1497600  533333 >,	/* TURBO */
+			< 1536000  533333 >,	/* TURBO+ */
+			< 1651200  533333 >,	/* SUPER TURBO */
+			< 1708800  533333 >,	/* SUPER TURBO+ */
+			< 1804800  533333 >;	/* SUPER TURBO++ */
 		cpu-to-dev-map-4 =
+			<  211200  400000 >,
 			<  345600  400000 >,
-			<  768000  400000 >,	/* SVS   */
-			<  902400  400000 >,	/* SVS+  */
-			<  998400  533333 >,	/* NOM   */
-			< 1094400  533333 >,	/* NOM+  */
-			< 1209600  533333 >;	/* TURBO */
+			<  422400  400000 >,
+			<  652800  400000 >,
+			<  729600  400000 >,	/* SVS   */
+			<  806400  400000 >,  /* SVS+  */
+			<  960000  400000 >,	/* SVS++ */
+			<  998400  400000 >,	/* NOM   */
+			< 1036800  533333 >,	/* NOM+  */
+			< 1209600  533333 >,	/* TURBO */
+			< 1344000  533333 >,  /* TURBO+ */
+			< 1497600  533333 >;	/* TURBO++ */
 		};
 
 		mincpubw-cpufreq {
 			target-dev = <&mincpubw>;
 			cpu-to-dev-map-0 =
-				< 1094400 2929 >,
+				< 422400 2929 >,
 				< 1497600 4248 >;
 			cpu-to-dev-map-4 =
-				<  998400 2929 >,
+				<  422400 2929 >,
 				< 1209600 4248 >;
 		};
 	};
