--- a/arch/arm64/configs/yuka_defconfig
+++ b/arch/arm64/configs/yuka_defconfig
@@ -550,6 +550,7 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDALUCARD is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_PWRUTILX is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_DARKUTIL is not set
+CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
