--- a/arch/arm64/configs/yuka_defconfig
+++ b/arch/arm64/configs/yuka_defconfig
@@ -568,6 +568,7 @@ CONFIG_CPU_FREQ_GOV_PWRUTILX=y
 CONFIG_CPU_FREQ_GOV_HELIX=y
 # CONFIG_CPU_FREQ_GOV_SCHEDALUCARD is not set
 CONFIG_CPU_FREQ_GOV_DARKUTIL=y
+CONFIG_CPU_FREQ_GOV_ALESSA=y
 
 #
 # CPU frequency scaling drivers
