--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -7,9 +7,8 @@ agent:
 blocks:
   - name: "Build"
     task:
-      env_vars:
-        - name: APP_ENV
-          value: prod
+      secrets:
+        - name: bot
       jobs:
       - name: Cooking Yuka
         commands:
