--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@
 *.lzo
 *.patch
 *.gcno
+*.ll
 modules.builtin
 Module.symvers
 *.dwo
@@ -99,3 +100,6 @@ all.config
 
 # fetched Android config fragments
 android/configs/android-*.cfg
+
+# out
+out
