--- a/arch/arm64/configs/yuka_defconfig
+++ b/arch/arm64/configs/yuka_defconfig
@@ -668,3 +668,6 @@ CONFIG_CRYPTO_AES_ARM64_NEON_BLK=y
 CONFIG_CRYPTO_CRC32_ARM64=y
 CONFIG_QMI_ENCDEC=y
 CONFIG_KLAPSE=y
+CONFIG_QNS_SYSTEM=y
+CONFIG_SOUND_CONTROL=y
+CONFIG_SOUND_CONTROL_HAX_3_GPL=y
