yuka_defconfig: Enable KCAL

--- a/arch/arm64/configs/yuka_defconfig
+++ b/arch/arm64/configs/yuka_defconfig
@@ -680,3 +680,4 @@ CONFIG_SDFAT_ALIGNED_MPAGE_WRITE=y
 CONFIG_SDFAT_VIRTUAL_XATTR=y
 CONFIG_SDFAT_VIRTUAL_XATTR_SELINUX_LABEL="u:object_r:sdcard_external:s0"
 CONFIG_SDFAT_STATISTICS=y
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
