--- a/arch/arm64/configs/yuka_defconfig
+++ b/arch/arm64/configs/yuka_defconfig
@@ -681,3 +681,6 @@ CONFIG_SDFAT_VIRTUAL_XATTR=y
 CONFIG_SDFAT_VIRTUAL_XATTR_SELINUX_LABEL="u:object_r:sdcard_external:s0"
 CONFIG_SDFAT_STATISTICS=y
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
+CONFIG_IOSCHED_FIOPS=y
+CONFIG_DEFAULT_FIOPS=y
+CONFIG_IOSCHED_NOOP=y
