--- a/arch/arm64/configs/yuka_defconfig
+++ b/arch/arm64/configs/yuka_defconfig
@@ -356,7 +356,7 @@ CONFIG_PCI_LABEL=y
 #
 # CONFIG_PCI_HOST_GENERIC is not set
 # CONFIG_PCIEPORTBUS is not set
-# CONFIG_HOTPLUG_PCI is not set
+CONFIG_HOTPLUG_PCI=y
 
 #
 # Kernel Features
@@ -565,14 +565,14 @@ CONFIG_CPU_FREQ_GOV_ALUCARD=y
 CONFIG_CPU_FREQ_GOV_DARKNESS=y
 CONFIG_CPU_FREQ_GOV_DARKNESSV5=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
-CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
+# CONFIG_CPU_FREQ_GOV_SCHEDUTIL is not set
 CONFIG_CPU_FREQ_GOV_CHILL=y
 CONFIG_CPU_FREQ_GOV_RELAXED=y
 # CONFIG_CPU_FREQ_GOV_NIGHTMARE is not set
 # CONFIG_CPU_FREQ_GOV_SCHED is not set
-CONFIG_CPU_FREQ_GOV_PWRUTILX=y
-CONFIG_CPU_FREQ_GOV_HELIX=y
-CONFIG_CPU_FREQ_GOV_SCHEDALUCARD=y
+# CONFIG_CPU_FREQ_GOV_PWRUTILX is not set
+# CONFIG_CPU_FREQ_GOV_HELIX is not set
+# CONFIG_CPU_FREQ_GOV_SCHEDALUCARD is not set
 CONFIG_CPU_FREQ_GOV_DARKUTIL=y
 
 #
@@ -3093,6 +3093,7 @@ CONFIG_SND_SOC_WCD_MBHC=y
 # CONFIG_SND_SOC_TPA6130A2 is not set
 CONFIG_SND_SOC_MSM_STUB=y
 CONFIG_SND_SOC_MSM_HDMI_DBA_CODEC_RX=y
+CONFIG_SOUND_CONTROL=y
 CONFIG_SOUND_CONTROL_HAX_3_GPL=y
 # CONFIG_SND_SIMPLE_CARD is not set
 # CONFIG_SOUND_PRIME is not set
