drivers: cpufreq: Added Alucard Hotplug
Signed-off-by: Ayra Hikari <AyraHikari@gmail.com>

--- a/arch/arm64/configs/yuka_defconfig
+++ b/arch/arm64/configs/yuka_defconfig
@@ -356,7 +356,7 @@ CONFIG_PCI_LABEL=y
 #
 # CONFIG_PCI_HOST_GENERIC is not set
 # CONFIG_PCIEPORTBUS is not set
-CONFIG_HOTPLUG_PCI=y
+# CONFIG_HOTPLUG_PCI is not set
 
 #
 # Kernel Features
@@ -4657,3 +4657,4 @@ CONFIG_QMI_ENCDEC=y
 # CONFIG_QMI_ENCDEC_DEBUG is not set
 # CONFIG_STRICT_MEMORY_RWX is not set
 CONFIG_FORCE_FAST_CHARGE=y
+CONFIG_ALUCARD_HOTPLUG=y
