--- a/arch/arm64/configs/yuka_defconfig
+++ b/arch/arm64/configs/yuka_defconfig
@@ -1,7 +1,6 @@
-CONFIG_LOCALVERSION="-Yuka-v1.2.1🌺"
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 3.18.137 Kernel Configuration
+# Linux/arm64 3.18.138 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -44,6 +43,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
+CONFIG_LOCALVERSION="-Yuka-v1.3.0🌺"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_DEFAULT_HOSTNAME="Xiaomi Redmi 3S (Yuka)"
 CONFIG_SWAP=y
@@ -383,6 +383,7 @@ CONFIG_SCHED_MC=y
 # CONFIG_SCHED_SMT is not set
 CONFIG_NR_CPUS=8
 CONFIG_HOTPLUG_CPU=y
+CONFIG_ASMP=y
 CONFIG_ARCH_NR_GPIO=1024
 # CONFIG_PREEMPT_NONE is not set
 # CONFIG_PREEMPT_VOLUNTARY is not set
@@ -484,6 +485,7 @@ CONFIG_BINFMT_SCRIPT=y
 # CONFIG_BINFMT_MISC is not set
 CONFIG_COREDUMP=y
 CONFIG_COMPAT=y
+CONFIG_KEYS_COMPAT=y
 
 #
 # Power management options
@@ -582,6 +584,7 @@ CONFIG_CPU_FREQ_GOV_DARKUTIL=y
 CONFIG_CPU_BOOST=y
 # CONFIG_MSM_TRACK_FREQ_TARGET_INDEX is not set
 CONFIG_FINGERPRINT_BOOST=y
+CONFIG_ALUCARD_HOTPLUG=y
 
 #
 # ARM CPU frequency scaling drivers
@@ -3093,7 +3096,6 @@ CONFIG_SND_SOC_WCD_MBHC=y
 # CONFIG_SND_SOC_TPA6130A2 is not set
 CONFIG_SND_SOC_MSM_STUB=y
 CONFIG_SND_SOC_MSM_HDMI_DBA_CODEC_RX=y
-CONFIG_SOUND_CONTROL=y
 CONFIG_SOUND_CONTROL_HAX_3_GPL=y
 # CONFIG_SND_SIMPLE_CARD is not set
 # CONFIG_SOUND_PRIME is not set
@@ -4418,7 +4420,6 @@ CONFIG_DEBUG_RODATA=y
 # Security options
 #
 CONFIG_KEYS=y
-CONFIG_KEYS_COMPAT=y
 # CONFIG_PERSISTENT_KEYRINGS is not set
 # CONFIG_BIG_KEYS is not set
 CONFIG_ENCRYPTED_KEYS=y
@@ -4657,4 +4658,3 @@ CONFIG_QMI_ENCDEC=y
 # CONFIG_QMI_ENCDEC_DEBUG is not set
 # CONFIG_STRICT_MEMORY_RWX is not set
 CONFIG_FORCE_FAST_CHARGE=y
-CONFIG_ALUCARD_HOTPLUG=y
