yuka_defconfig: Disable alucard hotplug

--- a/arch/arm64/configs/yuka_defconfig
+++ b/arch/arm64/configs/yuka_defconfig
@@ -584,7 +584,7 @@ CONFIG_CPU_FREQ_GOV_DARKUTIL=y
 CONFIG_CPU_BOOST=y
 # CONFIG_MSM_TRACK_FREQ_TARGET_INDEX is not set
 CONFIG_FINGERPRINT_BOOST=y
-CONFIG_ALUCARD_HOTPLUG=y
+# CONFIG_ALUCARD_HOTPLUG is not set
 
 #
 # ARM CPU frequency scaling drivers
