--- a/Yuka.drone.yml
+++ b/Yuka.drone.yml
@@ -22,6 +22,7 @@ steps:
       kernelname: Yuka Kernel
       versi: v1.2.0
       unified: true
+      buildtype: gcc
 
     commands:
       - bash COMPILER/CookingYuka
